--- a/Carp/View/Results View/Results Cell/ResultsCell.xib
+++ b/Carp/View/Results View/Results Cell/ResultsCell.xib
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,13 +23,13 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="R$: 4,50" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSU-aS-8Hf">
-                        <rect key="frame" x="20" y="12.5" width="87" height="29"/>
+                        <rect key="frame" x="20" y="13" width="90" height="28"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="24"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PIX-ah-A3g">
-                        <rect key="frame" x="20" y="47.5" width="8" height="12"/>
+                        <rect key="frame" x="20" y="46.5" width="8" height="14"/>
                         <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -45,7 +41,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yDb-DY-EMi">
-                        <rect key="frame" x="56" y="47.5" width="8" height="12"/>
+                        <rect key="frame" x="56" y="46.5" width="8" height="14"/>
                         <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -57,7 +53,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rYo-d9-ezf">
-                        <rect key="frame" x="92" y="47.5" width="8" height="12"/>
+                        <rect key="frame" x="92" y="46.5" width="8" height="14"/>
                         <fontDescription key="fontDescription" name="FontAwesome5FreeSolid" family="Font Awesome 5 Free" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -97,8 +93,8 @@
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="destinyDistanceLabel" destination="zpK-jv-0vN" id="kzi-C4-Orx"/>
-                <outlet property="destinyIcon" destination="yDb-DY-EMi" id="hFv-YD-boB"/>
+                <outlet property="destinationDistanceLabel" destination="zpK-jv-0vN" id="kzi-C4-Orx"/>
+                <outlet property="destinationIcon" destination="yDb-DY-EMi" id="hFv-YD-boB"/>
                 <outlet property="originDistanceLabel" destination="5xK-50-fPg" id="EH3-ue-jVa"/>
                 <outlet property="originIcon" destination="PIX-ah-A3g" id="lOs-E2-S7H"/>
                 <outlet property="priceLabel" destination="LSU-aS-8Hf" id="ST5-Xg-2dR"/>
