--- a/Carp/View/Alert/AlertView.xib
+++ b/Carp/View/Alert/AlertView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -114,15 +114,41 @@
                         </view>
                     </subviews>
                 </stackView>
+                <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="exit_button" translatesAutoresizingMaskIntoConstraints="NO" id="3Ry-37-Rl2">
+                    <rect key="frame" x="350" y="21.5" width="25" height="25"/>
+                    <gestureRecognizers/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="3Ry-37-Rl2" secondAttribute="height" multiplier="1:1" id="qsz-HM-Da1"/>
+                        <constraint firstAttribute="height" constant="25" id="xaO-Yz-xYW"/>
+                    </constraints>
+                    <connections>
+                        <outletCollection property="gestureRecognizers" destination="LsS-kz-ShF" appends="YES" id="ptM-4Z-Spq"/>
+                    </connections>
+                </imageView>
             </subviews>
             <constraints>
                 <constraint firstItem="B5H-ye-TK6" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="2Qx-KS-iN8"/>
+                <constraint firstItem="B5H-ye-TK6" firstAttribute="top" secondItem="3Ry-37-Rl2" secondAttribute="bottom" constant="6" id="8jW-3Q-l8d"/>
                 <constraint firstItem="B5H-ye-TK6" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="GT5-Xs-wlJ"/>
+                <constraint firstAttribute="trailing" secondItem="3Ry-37-Rl2" secondAttribute="trailing" id="IPZ-dZ-unZ"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="B5H-ye-TK6" secondAttribute="trailing" id="aXd-la-zuq"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="101.59999999999999" y="4.497751124437781"/>
         </view>
+        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="uUe-Zj-7cg">
+            <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <point key="canvasLocation" x="1179" y="-259"/>
+        </imageView>
+        <tapGestureRecognizer id="LsS-kz-ShF">
+            <connections>
+                <action selector="didPressExitButton:" destination="-1" id="cy0-i7-FR6"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
+    <resources>
+        <image name="exit_button" width="24" height="24"/>
+    </resources>
 </document>
